#11 수정된 너목보 게임 로직 (#65)
* feature: spring security setting in progress...

* chose: securityConfig ing...

* setting: Setting up security dependencies

* setting: token setting

* setting: user dto setting

* setting: user custom setting

* setting: user controller and service setting

* setting: security setting

* chose: // -> modify

* setting: Security and JWT setting

* chose: jwt files Add Autowired. and security , swagger related files modify.

* feature: login swaggerUI response success But ExceptionCode and log message modify scheduled to be Applied

* feature: ExceptionCode and log message and annotation modify  Applied and add Security handler

* feature: add logout logic

* feature: find password feature and Emailcheck feature Working...

* feature: add email validation check login

* feature: password change success!

* feature: email file change Order of logic and add error logic

* feature: Enhance JWT authentication and token management

- Refactor JwtAuthenticationFilter to properly handle Bearer tokens and refresh tokens
- Fix issue with @AuthenticationPrincipal CustomUser injection
- Change token reissuance from GET to POST for security
- Include user information in refresh token for better validation
- Improve error handling and logging for token validation
- Ensure correct handling of null Refresh-Token in requests

* chose: modify version and add list

* feature:
- Added midnight game question generation logic
- add fixed question in gest
- add game question selection query logic
- game_voice table add column is_today_question, is_past

* refactor: Add logic to check user's game record

* refactor: Modified logic to receive logged in user information and process it separately and Modified SecurityConfig file and When recording a game, the userId is null and the error has been corrected so that the userId value is received and saved.

* refactor: Add processing if userId is null

* chose