@@ -27,7 +27,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
@@ -56,7 +55,8 @@ public class SecurityConfig {
                     auth.requestMatchers(HttpMethod.POST,
                                          "/api/v1/login", "/api/v1/token/issue",
                                          "/api/v1/users/new", "/api/v1/users/mailConfirm", "/api/v1/users/verifyCode",
-                                         "/api/v1/verify/**", "/api/v1/email/**").permitAll();
+                                         "/api/v1/verify/**", "/api/v1/email/**",
+                                         "/api/v1/challenge/**", "/api/v1/sign/**", "/api/v1/voice/**").permitAll();
 
                     auth.requestMatchers(HttpMethod.GET,
                                         "/api/v1/search/**",
@@ -67,8 +67,8 @@ public class SecurityConfig {
 
                     auth.requestMatchers(HttpMethod.POST,
                                         "/api/v1/logout",
-                                        "api/v1/friends/**", "/api/v1/page/**",
-                                        "api/v1/sentence/**", "api/v1/sign/**","/api/v1/voice/**" )
+                                        "api/v1/friends/**", "/api/v1/page/**", "/api/v1/challenge/**",
+                                         "api/v1/sentence/**", "api/v1/sign/**","/api/v1/voice/**" )
                                             .hasAnyAuthority("FREE_USER", "PREMIUM_USER", "ADMIN");
 
                     auth.requestMatchers(HttpMethod.POST,
@@ -93,7 +93,7 @@ public class SecurityConfig {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
         /* TODO :: 추후 설정 */
-        corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000/"));
+        corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:3000","https://sorisonsoon.vercel.app"));
 //        corsConfiguration.setAllowedOrigins(List.of("*"));
         corsConfiguration.setAllowedMethods(Arrays.asList("GET", "PUT", "POST", "DELETE"));
         corsConfiguration.setAllowedHeaders(Arrays.asList("Access-Control-Allow-Origin",
